--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+chatterbot==1.0.4
 chatterbot-corpus==1.2.0
 click==7.1.2
 Flask==1.1.2
@@ -7,3 +8,4 @@ Jinja2==2.11.2
 MarkupSafe==1.1.1
 PyYAML==3.13
 Werkzeug==1.0.1
+Cython==0.29.15
